fix mobile alignment of vimeo icon

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -282,8 +282,8 @@ hr {
   overflow: hidden;
 }
 
-.video-container iframe,  
-.video-container object,  
+.video-container iframe,
+.video-container object,
 .video-container embed {
   position: absolute;
   top: 0;
@@ -349,7 +349,7 @@ hr {
         &:hover{
           text-decoration: none;
           color: $fancy_white;
-        } 
+        }
       }
     }
 
@@ -412,7 +412,7 @@ hr {
     .triangle-cutout {
       display: none;
     }
-    
+
     @media all and (max-width: 600px) {
       .container {
         margin-bottom: 40px;
@@ -431,7 +431,7 @@ hr {
         width: 100%;
         height: 370px;
       }
-      
+
       .container {
         padding-top: 174px;
 
@@ -517,7 +517,7 @@ hr {
    margin-bottom: 20px;
    width: 630px;
    display: inline-block;
-   vertical-align: top; 
+   vertical-align: top;
    text-align: left;
   }
 
@@ -573,18 +573,18 @@ hr {
 
     blockquote {
       border-left: 4px solid #dddddd;
-      color: #777777; 
+      color: #777777;
       padding: 0 15px;
       font-size: 16px;
       margin: 25px 18px 25px 18px;
     }
-      
+
     blockquote > :first-child {
-      margin-top: 0; 
+      margin-top: 0;
     }
-      
+
     blockquote > :last-child {
-      margin-bottom: 0; 
+      margin-bottom: 0;
     }
 
     // @media (max-width: 767px) {
@@ -631,7 +631,7 @@ hr {
 
   .article-sidebar-city {
     margin-top: 10px;
-    
+
     @media (max-width:419px){
       margin-top: auto;
     }
@@ -661,7 +661,7 @@ hr {
     //   // li {
     //   //   list-style-type: none;
     //   // }
-    //  } 
+    //  }
 
     // @media (max-width: 767px) {
     //   padding: 20px;
@@ -955,7 +955,7 @@ $small_slide_height:  400px;
         border-right: none;
 
         a {
-          margin-right: 0px;
+          // margin-right: 0px;
         }
       }
 
@@ -1253,7 +1253,7 @@ text-indent: 0;
 .social-links li a:hover { background-position: 0 0; }
 
 
-//  ACADEMY PAGES 
+//  ACADEMY PAGES
 
 .title-pad {
   padding: 30px 0px 15px 0px;
@@ -1289,7 +1289,7 @@ text-indent: 0;
   li {
     font-size: 16px;
     line-height: 12px;
-    list-style-type: none; 
+    list-style-type: none;
   }
 }
 
@@ -1305,7 +1305,7 @@ li.academy-list {
   li {
     margin-bottom: 12px;
     line-height: 16px;
-    font-size: 16px; 
+    font-size: 16px;
   }
 }
 
@@ -1482,22 +1482,22 @@ li {
       text-indent: 5555px;
       display: block;
       width: 104px;
-      height: 103px; 
+      height: 103px;
       margin: 0 auto;
       &:hover {
         background-position: bottom;
-      } 
+      }
     }
     a.icon-events {
       background: image_url('icon-events.png') no-repeat top;
       text-indent: 5555px;
       display: block;
       width: 104px;
-      height: 103px; 
+      height: 103px;
       margin: 0 auto;
       &:hover {
         background-position: bottom;
-      } 
+      }
     }
     a.icon-cowork {
       background: image_url('icon-cowork.png') no-repeat top;
@@ -1505,10 +1505,10 @@ li {
       display: block;
       width: 104px;
       height: 103px;
-      margin: 0 auto; 
+      margin: 0 auto;
       &:hover {
         background-position: bottom;
-      } 
+      }
     }
     a.icon-accelerator {
       background: image_url('icon-accelerator.png') no-repeat top;
@@ -1516,7 +1516,7 @@ li {
       display: block;
       width: 104px;
       height: 103px;
-      margin: 0 auto;  
+      margin: 0 auto;
       &:hover {
         background-position: bottom;
       }
@@ -1527,7 +1527,7 @@ li {
       display: block;
       width: 104px;
       height: 103px;
-      margin: 0 auto;  
+      margin: 0 auto;
       &:hover {
         background-position: bottom;
       }
@@ -1597,7 +1597,7 @@ li {
 
 /* #Media Queries
 ================================================== */
-  
+
   /* Tablet Portrait size to standard 960 (devices and browsers) */
   @media only screen and (min-width: 600px) and (max-width: 979px) {
 
@@ -1773,8 +1773,8 @@ li {
       }
     }
   }
- 
- 
+
+
   /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
   @media only screen and (max-width: 599px) {
 
@@ -1814,7 +1814,7 @@ li {
           margin-left: 0;
           display: inline-block;
           vertical-align: top;
-        } 
+        }
       }
     }
 
@@ -1868,7 +1868,7 @@ li {
           .icon {
             margin-left: 0px;
             font-size: 28px;
-          } 
+          }
         }
       }
 
@@ -2213,7 +2213,7 @@ html:hover [class^="ss-"]{-ms-zoom: 1;}
   }
 }
 
-.ss-twitter, .ss-facebook, 
+.ss-twitter, .ss-facebook,
 .ss-vimeo {
   font-size: 20px;
   margin-left: 15px;
